--- a/HTML_CSS-Tea-station-projects/about.html
+++ b/HTML_CSS-Tea-station-projects/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./fontawesome-free-6.2.1-web/css/all.css">
 </head>
 <body>
-    <!-- navigation button  -->
+    <!-- navigation button -->
     <span class="nav-btn" id="nav-btn">
         <i class="fa-solid fa-bars-staggered"></i>
     </span>
@@ -20,77 +20,80 @@
     <nav class="navbar" id="navbar">
         <div class="navbar-header">
             <span class="nav-close" id="nav-close">
-                <i class="fas fa-time"></i>
+                <i class="fas fa-times"></i>
             </span>
         </div>
-<ul class="nav-items">
-    <li><a href="./index.html" class="nav-link">home</a></li>
-    <li><a href="./skills.html" class="nav-link">skills</a></li>
-    <li><a href="./about.html" class="nav-link">about</a></li>
-    <li><a href="./products.html" class="nav-link">products</a></li>
-</ul>
+        <ul class="nav-items">
+            <li><a href="./index.html" class="nav-link">home</a></li>
+            <li><a href="./skills.html" class="nav-link">skills</a></li>
+            <li><a href="./about.html" class="nav-link">about</a></li>
+            <li><a href="./products.html" class="nav-link">products</a></li>
+        </ul> 
     </nav>
     <!-- header -->
     <header class="header">
         <div class="banner">
-            <he3 class="banner-subtitle">over one hundred flavour of tea</he3>
+            <h3 class="banner-subtitle">Over one hundred flavours of tea</h3>
             <h1 class="banner-title">speacially crafted tea</h1>
-            <a href="./skills.html" class="banner-btn"></a>
+            <a href="./skills.html" class="banner-btn">explore</a>
         </div>
     </header>
-    <!--  end of header -->
-    <!-- content divider -->
+
+    <!-- end of header -->
+    <!-- content-divider -->
     <div class="content-divider"></div>
     <!-- end of content divider -->
-     <!-- about -->
-     <section class="about">
+    <!-- about -->
+    <section class="about">
         <div class="section-center clearfix">
-            <!-- first column -->
-            <article class="about-img">
-                <div class="about-picture-container">
-                    <img src="./images/about-bcg.jpg" alt="tea kettle"
-                    class="about-picture">
-                </div>
-            </article>
-            <!-- second column -->
-            <article class="about-info">
-                <!-- section title -->
-                <div>
-                    <h3 class="section-subtitle">about our</h3>
-                    <h2 class="section-title">tea Station</h2>
-                </div>
-                <!-- end section title -->
-                <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et autem ipsum sed assumenda, iusto, voluptates, illum excepturi magnam commodi voluptas harum libero dolores! Ab rerum at eaque fugiat commodi beatae!</p>
-                <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et autem ipsum sed assumenda, iusto, voluptates, illum excepturi magnam commodi voluptas harum libero dolores! Ab rerum at eaque fugiat commodi beatae!</p>
-                <a href="./about.html" class="main-btm"></a>
-            </article>
+           <!-- first column -->
+           <article class="about-img">
+               <div class="about-picture-container">
+                   <img src="./images/about-bcg.jpg" alt="tea kettle" class="about-picture"/>
+               </div>
+           </article>
+           <!-- second column -->
+           <article class="about-info">
+               <!-- section title -->
+               <div>
+                   <h3 class="section-subtitle">about our</h3>
+                   <h2 class="section-title">tea station</h2>
+               </div>
+               <!-- end section title -->
+               <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
+               <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
+               <a href="./about.html" class="main-btn">learn more</a>
+           </article>
         </div>
-    </section>
-    <!-- end of about -->
-     <!-- footer section -->
+   </section>
+   <!-- end of about -->
 
-     <footer class="footer">
-        <div class="section-center">
-            <div class="social-icons">
-                <!-- social icon -->
-                <a href="#" class="social-icons">
-                    <i class="fa-brands fa-square-facebook"></i> 
-                </a>
-                <!-- social icon -->
-                <a href="#" class="social-icons">
-                    <i class="fa-brands fa-twitter"></i>
-                </a>
-                <!-- social icon -->
-                <a href="#" class="social-icons">
-                    <i class="fa-brands fa-square-instagram"></i>
-                </a>
-                <!-- end of social icons -->
-            </div>
-            <p class="footer-text">
-                &copy; <span class="text-primary">tea station</span> all rights reserved
-            </p>
+   <!-- content-divider -->
+   <div class="content-divider"></div>
+   <!-- end of content divider -->
+   <!-- footer section -->
+   <footer class="footer">
+    <div class="section-center">
+        <div class="social-icons">
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-twitter"></i>
+            </a>
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <!-- end of social icon -->
         </div>
-    </footer>
-    <script src="./app.js"></script>
+        <p class="footer-text">
+            &copy; <span class="text-primary">tea station</span> all rights reserved
+        </p>
+    </div>
+</footer>
+<script src="./app.js"></script>
 </body>
 </html>
