--- a/HTML_CSS-Tea-station-projects/index.html
+++ b/HTML_CSS-Tea-station-projects/index.html
@@ -35,7 +35,7 @@
         <div class="banner">
             <h3 class="banner-subtitle">Over one hundred flavours of tea</h3>
             <h1 class="banner-title">speacially crafted tea</h1>
-            <a href="./skills.html" class="banner-btn">explore/a>
+            <a href="./skills.html" class="banner-btn">explore</a>
         </div>
     </header>
 
@@ -111,7 +111,7 @@
                 <!-- end section title -->
                 <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
                 <p class="about-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dicta quibusdam reprehenderit hic quisquam, aut ea, provident officia cum quia illum obcaecati velit maxime quae voluptate natus amet voluptatem molestias.</p>
-                <a href="./about.html" class="main-btn"></a>
+                <a href="./about.html" class="main-btn">learn more</a>
             </article>
          </div>
     </section>
@@ -160,8 +160,7 @@
     <!-- services -->
     <section class="services">
         <!-- section title -->
-        <div class="services-title
-        text-center">
+        <div class="services-title text-center">
             <h3 class="section-subtitle">explore</h3>
             <h2 class="section-title">our services</h2>
         </div>
@@ -227,7 +226,10 @@
         </div>
     </section>
     <!-- end of services -->
-    
+
+    <!-- content-divider -->
+    <div class="content-divider"></div>
+    <!-- end of content divider -->
     
     <!-- contact -->
     <section class="contact">
@@ -276,7 +278,7 @@
             </article>
             <!-- contact form -->
             <article class="contact-form">
-                <form action="https://formspree.io/f/xnqyjpej" method="POST" class="form-group">
+                <form action="https://formspree.io/f/xyyakeqn" method="POST" class="form-group">
                     <input type="text" name="name" placeholder="please enter name" class="form-control">
                     <input type="email" name="email" placeholder="please enter mail" class="form-control">
                     <textarea name="message" rows="5" class="form-control"></textarea>
@@ -287,6 +289,10 @@
     </section>
     <!-- end of contact -->
 
+
+     <!-- content-divider -->
+     <div class="content-divider"></div>
+     <!-- end of content divider -->
     <!-- footer section -->
     <footer class="footer">
         <div class="section-center">
@@ -306,7 +312,7 @@
                 <!-- end of social icon -->
             </div>
             <p class="footer-text">
-                &copy; <span class="text-primary">tea station</span> all rights reserved
+                &copy; <span class="text-primary">tea station 2023</span> all rights reserved
             </p>
         </div>
     </footer>
