--- a/HTML_CSS-Tea-station-projects/skills.html
+++ b/HTML_CSS-Tea-station-projects/skills.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our skills</title>
+    <title>Our Products</title>
     <!-- styles -->
     <link rel="stylesheet" href="./styles.css">
     <!-- font awesome -->
     <link rel="stylesheet" href="./fontawesome-free-6.2.1-web/css/all.css">
 </head>
 <body>
-    <!-- navigation button  -->
+    <!-- navigation button -->
     <span class="nav-btn" id="nav-btn">
         <i class="fa-solid fa-bars-staggered"></i>
     </span>
@@ -20,97 +20,98 @@
     <nav class="navbar" id="navbar">
         <div class="navbar-header">
             <span class="nav-close" id="nav-close">
-                <i class="fas fa-time"></i>
+                <i class="fas fa-times"></i>
             </span>
         </div>
-<ul class="nav-items">
-    <li><a href="./index.html" class="nav-link">home</a></li>
-    <li><a href="./skills.html" class="nav-link">skills</a></li>
-    <li><a href="./about.html" class="nav-link">about</a></li>
-    <li><a href="./products.html" class="nav-link">products</a></li>
-</ul>
+        <ul class="nav-items">
+            <li><a href="./index.html" class="nav-link">home</a></li>
+            <li><a href="./skills.html" class="nav-link">skills</a></li>
+            <li><a href="./about.html" class="nav-link">about</a></li>
+            <li><a href="./products.html" class="nav-link">products</a></li>
+        </ul> 
     </nav>
     <!-- header -->
     <header class="header">
         <div class="banner">
-            <he3 class="banner-subtitle">over one hundred flavour of tea</he3>
+            <h3 class="banner-subtitle">Over one hundred flavours of tea</h3>
             <h1 class="banner-title">speacially crafted tea</h1>
-            <a href="./skills.html" class="banner-btn"></a>
+            <a href="./skills.html" class="banner-btn">explore</a>
         </div>
     </header>
-    <!--  end of header -->
-    <!-- skills section -->
-    <section class="skills clearfix">
-        <!-- single skills -->
-        <article class="skills">
-            <span class="skill-icon">
-                <i class="fas fa-mug-hot"></i>
-            </span>
-<h3 class="skills-title">mode in us</h3>
-       <p class="skills-text">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt nobis beatae cum incidunt eos rerum corporis nisi praesentium iusto iste? 
-       </p>
-        </article>
-        <!--end single skill -->
-          <!-- single skills -->
-          <article class="skills">
-            <span class="skill-icon">
-                <i class="fa-solid fa-champagne-glasses"></i>>
-            </span>
-<h3 class="skills-title">relaxation</h3>
-       <p class="skills-text">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt nobis beatae cum incidunt eos rerum corporis nisi praesentium iusto iste? 
-       </p>
-        </article>
-        <!--end single skill -->
-          <!-- single skills -->
-          <article class="skills">
-            <span class="skill-icon">
-                <i class="fa-sharp fa-solid fa-bomb"></i>
-            </span>
-<h3 class="skills-title">enegry</h3>
-       <p class="skills-text">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt nobis beatae cum incidunt eos rerum corporis nisi praesentium iusto iste? 
-       </p>
-        </article>
-        <!--end single skill -->
-          <!-- single skills -->
-          <article class="skills">
-            <span class="skill-icon">
-                <i class="fa-solid fa-mortar-pestle"></i>
-            </span>
-<h3 class="skills-title">family recipe</h3>
-       <p class="skills-text">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt nobis beatae cum incidunt eos rerum corporis nisi praesentium iusto iste? 
-       </p>
-        </article>
-        <!--end single skill -->
-    </section>
-    <!-- end of skills section -->
-    <!-- footer section -->
 
-    <footer class="footer">
-        <div class="section-center">
-            <div class="social-icons">
-                <!-- social icon -->
-                <a href="#" class="social-icons">
-                    <i class="fa-brands fa-square-facebook"></i> 
-                </a>
-                <!-- social icon -->
-                <a href="#" class="social-icons">
-                    <i class="fa-brands fa-twitter"></i>
-                </a>
-                <!-- social icon -->
-                <a href="#" class="social-icons">
-                    <i class="fa-brands fa-square-instagram"></i>
-                </a>
-                <!-- end of social icons -->
-            </div>
-            <p class="footer-text">
-                &copy; <span class="text-primary">tea station</span> all rights reserved
-            </p>
+    <!-- end of header -->
+    <!-- content-divider -->
+    <div class="content-divider"></div>
+    <!-- end of content divider -->
+
+    <!-- products -->
+    <section class="products">
+        <div class="section-center clearfix">
+            <!-- product info -->
+            <article class="products-info">
+                <!-- sectin title -->
+                <div>
+                    <h3 class="section-subtitle">check out</h3>
+                    <h2 class="section-title text-white">our products</h2>
+                </div>
+                <!-- end section title -->
+                <p class="product-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio nesciunt, tempora alias excepturi porro odit magnam accusantium ea aliquam quasi sit quia ducimus necessitatibus fugit iure. Neque eveniet maxime quisquam</p>
+                <a href="./products.html" class="main-btn">inventory</a>
+            </article>
+            <!-- product inventory -->
+            <article class="products-inventory clearfix">
+                <!-- single product -->
+                <article class="product">
+                    <img src="./images/product-1.jpg" alt="product-1" class="product-img"/>
+                    <h3 class="product-title">normal tea with speacial flavour</h3>
+                    <h3 class="product-price">&#8377; 200</h3>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <img src="./images/product-2.jpg" alt="product-2" class="product-img"/>
+                    <h3 class="product-title">speacial tea with speacial flavour</h3>
+                    <h3 class="product-price">&#8377; 400</h3>
+                </article>
+                <!-- end of single product -->
+                <!-- single product -->
+                <article class="product">
+                    <img src="./images/product-3.jpg" alt="product-3" class="product-img"/>
+                    <h3 class="product-title">speacial tea with super speacial flavour</h3>
+                    <h3 class="product-price">&#8377; 600</h3>
+                </article>
+                <!-- end of single product -->
+            </article>
         </div>
-    </footer>
-    <script src="./app.js"></script>
+    </section>
+    <!-- end of products -->
+
+    <!-- content-divider -->
+   <div class="content-divider"></div>
+   <!-- end of content divider -->
+     <!-- footer section -->
+   <footer class="footer">
+    <div class="section-center">
+        <div class="social-icons">
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-twitter"></i>
+            </a>
+            <!-- social icon -->
+            <a href="#" class="social-icon">
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <!-- end of social icon -->
+        </div>
+        <p class="footer-text">
+            &copy; <span class="text-primary">tea station</span> all rights reserved
+        </p>
+    </div>
+</footer>
+<script src="./app.js"></script>
 </body>
 </html>
