--- a/HTML_CSS-Tea-station-projects/index.html
+++ b/HTML_CSS-Tea-station-projects/index.html
@@ -258,7 +258,7 @@
                         email
                     </h3>
                     <h3 class="contact-text">
-                    teastation@gmail.com
+                    kurubayaswanth13@gmail.com
                     </h3>
                 </div>
                 <!-- end of contact item -->
@@ -271,7 +271,7 @@
                         phone
                     </h3>
                     <h3 class="contact-text">
-                    #080 54563956895
+                    #080 9515083419
                     </h3>
                 </div>
                 <!-- end of contact item -->
