--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </ul> 
     </nav>
     <!-- header -->
+    <!-- header -->
     <header class="header">
         <div class="banner">
             <h3 class="banner-subtitle">Over one hundred flavours of tea</h3>
